--- a/StocksHTML/Components/Layout/MainLayout.razor
+++ b/StocksHTML/Components/Layout/MainLayout.razor
@@ -2,7 +2,7 @@
 
 <div class="page">
     <main>
-        <article class="content px-4">
+        <article class="main-layout">
             @Body
         </article>
     </main>
