--- a/StocksHTML/Components/Pages/LOGIN.razor
+++ b/StocksHTML/Components/Pages/LOGIN.razor
@@ -1,55 +1,53 @@
 ﻿@page "/"
 @inject NavigationManager Navigation
+@inject HttpClient Http
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Login | Ludiflex</title>
-</head>
-<body>
+<div class="page-container">
     <div class="login-box">
         <div class="login-header">
             <header>LOGIN</header>
         </div>
         <div class="input-box">
-            <input @bind = 'EMAIL' type="text" class="input-field" placeholder="EMAIL" autocomplete="off" required>
+            <input @ref="EMAILINP" type="text" class="input-field" placeholder="EMAIL" autocomplete="off" required />
         </div>
         <div class="input-box">
-            <input @bind='PASSWORD' type="password" class="input-field" placeholder="PASSWORD" autocomplete="off" required>
+            <input @ref="PASSWORDINP" type="password" class="input-field" placeholder="PASSWORD" autocomplete="off" required />
         </div>
         <div class="forgot">
             <section>
-                <input type="checkbox" id="check">
+                <input type="checkbox" id="check" />
                 <label for="check">REMEMBER ME</label>
             </section>
         </div>
         <div class="input-submit">
-            <button class="submit-btn" @onclick="ValidateLOGIN" id="submit"></button>
+            <button class="submit-btn" @onclick="@ValidateLOGIN" id="submit"></button>
             <label for="submit">SIGN IN</label>
         </div>
     </div>
-</body>
-</html>
+</div>
 
-@code
-{
+@code {
     private string EMAIL = string.Empty;
     private string PASSWORD = string.Empty;
+
+    private ElementReference EMAILINP;
+    private ElementReference PASSWORDINP;
 
 
     private async Task ValidateLOGIN()
     {
-        HttpClient cLIENT = new HttpClient();
-        string aPIURL = $@"http://localhost:5001/api/user/{EMAIL}";
-        HttpResponseMessage rESP = await cLIENT.GetAsync(aPIURL);
+        EMAIL = EMAILINP.ToString();
+        PASSWORD = PASSWORDINP.ToString();
 
-        if (rESP.IsSuccessStatusCode)
+        var response = await Http.GetAsync($"http://localhost:5001/api/user/{EMAIL}");
+
+        if (response.IsSuccessStatusCode)
+        {
             Navigation.NavigateTo("/overview");
+        }
         else
+        {
             Navigation.NavigateTo("/");
+        }
     }
 }
