--- a/StocksHTML/Components/Pages/LOGIN.razor.css
+++ b/StocksHTML/Components/Pages/LOGIN.razor.css
@@ -5,12 +5,19 @@
     font-family: 'Poppins', sans-serif;
 }
 
-body {
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+.page-container {
+    width: 100vw;
+    height: 100vh;
+    background: #dfdfdf;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background: #dfdfdf;
 }
 
 .login-box {
